[package]
name = "blog-updater"
version = "0.1.0"
edition = "2018"


[dependencies]
gumdrop = "0.8"
exechelper = { path = "../exechelper" }
simple-interaction = { path = "../simple-interaction" }
pulldown-cmark = "0.8"
context_based_variable_substitution = { path = "../context_based_variable_substitution" }
